pinch to zoom will not works fuckgit add -A

--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/stack": "^6.3.10",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-photo-view": "^1.5.2",
+    "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4"
   },
