--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-viewing": "^0.2.2",
     "react-native-photo-view": "^1.5.2",
     "react-native-pinch-zoom-view": "^0.2.0",
+    "react-native-redash": "^18.1.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4"
   },
